# platform

./: ECOSYSTEM.md  README.md  package.json  pnpm-lock.yaml  tsconfig.json
.github/workflows/: ci.yml  publish.yml
crates/: Cargo.toml
crates/platform-auth/: Cargo.toml
crates/platform-auth/src/: claims.rs  cross_app.rs  error.rs  jwt.rs  lib.rs  oauth.rs
crates/platform-events/: Cargo.toml
crates/platform-events/src/: bus.rs  lib.rs  redis.rs  types.rs
crates/platform-mcp/: Cargo.toml
crates/platform-mcp/src/: health.rs  lib.rs  retry.rs  server.rs  types.rs
crates/platform-mcp/src/clients/: config.rs  mod.rs  noteman.rs  shipcheck.rs  verity.rs
crates/platform-mcp/src/tools/: mod.rs  noteman.rs  shipcheck.rs  verity.rs  workflow.rs
crates/platform-mcp/tests/: workflow_e2e_tests.rs
crates/platform-org/: Cargo.toml
crates/platform-org/src/: context.rs  lib.rs  membership.rs  organization.rs  project.rs  roles.rs  settings.rs  tiers.rs
crates/platform-rbac/: Cargo.toml
crates/platform-rbac/src/: actions.rs  lib.rs  permissions.rs  resources.rs
src/: index.ts
src/auth/: jwt.ts
src/services/: session-sync.ts
src/types/: events.ts  organization.ts  rbac.ts  user.ts
src/utils/: validation.ts
